--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 :root {
-    --primary-color: #ed135a;
-    --light-color: #ff5c86;
-    --dark-color: #b30031;
-    --bg-color: #ff5c8644;
+    --primary-color: #64B5F6;
+    --light-color: #2196F3;
+    --dark-color: #1976D2;
+    --bg-color: #0D47A1;
 }
 main {
     display: flex;
@@ -38,7 +38,7 @@ main {
     align-items: center;
     width: 100%;
     height: 100px;
-    font: bold 2.5rem serif;
+    font: bold 2.5rem sans-serif;
     border-bottom: solid 5px #000;
     background-color: var(--primary-color);
     margin-bottom: 20px;
@@ -65,7 +65,7 @@ form {
     height: 50px;
     border: 1px solid var(--primary-color);
     outline: none;
-    font: bold 1.5rem serif;
+    font: bold 1.5rem sans-serif;
     padding-left: 10px;
     background-color: #111;
     color: #fff;
@@ -76,7 +76,7 @@ form {
 }
 
 .input label {
-    font: bold 1.5rem serif;
+    font: bold 1.5rem sans-serif;
 }
 
 button {
@@ -97,7 +97,7 @@ button {
     width: 300px;
     height: 150px;
     border: 1px solid var(--primary-color);
-    font: italic 1.5rem serif;
+    font: italic 1.5rem sans-serif;
     font-weight: 500;
     /* box-shadow: 0px 0px 10px black; */
     /* background-color: var(--light-color); */
